test/spec_vectors/simd_lane/fail/module_169.wat
(module (func $f32x4.extract_lane-2nd-arg-empty (result f32) (f32x4.extract_lane 0)))